<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JDC</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_activity_welcome_string">Testing!</string>
    <string name="splashscreen">Splash Screen</string>
    <string name="activity_main_title">J D C\nWelfare Organization</string>
    <string name="activity_main_btn_mission">Mission &amp; Vision</string>
    <string name="Facebook">Facebook</string>
    <string name="Twitter">Twitter</string>
    <string name="ads">Advertisements</string>
    <string name="projects">Managements/\nProjects</string>
    <string name="Gallery">Gallery</string>
    <string name="About_Us">About Us</string>
    <string name="Contact_Us">Contact Us</string>
    <string name="donate">Donate Us</string>
    <string name="volunteer_register">Volunteer\nRegister</string>
    <string name="resc_register">Rescue\nRegister</string>
    <string name="mission_vision">To be the principal charitable organization of Pakistan, and be self-reliant and committed to supporting and alleviating human sufferings through providing educational, medical and community support, while acting in compliance with fundamental principles and humanitarian values of the JDC Welfare Organization.</string>
    <string name="mission_vision_title">Mission &amp; Vision</string>
    <string name="mission_vision_back">Go Back</string>
    <string name="healthtxt">Health Care</string>
    <string name="educationtxt">Education</string>
    <string name="welfaretxt">Welfare</string>
    <string name="disastertxt">Disaster</string>
    <string name="projectstxt">Projects</string>
    <string name="dummytext">adz</string>
    <string name="aboutus_title">About Us</string>
    <string name="disaster_title">Disaster</string>
    <string name="health_title">Health Care</string>
    <string name="welfare_title">Welfare</string>
    <string name="education_title">Education</string>
    <string name="donateus_title">Donate Us</string>
    <string name="aboutus">Jafaria Disaster Management Cell (JDC) Welfare organization is working as an independent, non-government, non-profit and charitable organization. It has no affiliation with any regional ethnic or political organization of Pakistan or anywhere in the world. Jafaria Disaster Management Cell (JDC) is exclusively engaged in charitable activities and programs. Our aim is to support disaster management, education, health care and other relief services. Jafaria Disaster Management Cell (JDC) is dedicated to the services of humanity without any discrimination regardless of creed, religion and political association.\nOur main objective is to minimize the human sufferings and help the people to restart their normal life is the first and foremost practical motto of JDC Welfare Organization. As a result JDC welfare organisation are working with the help of its kind hearted donors are determined to meet this challenge with full force and devotion.\n\n<b>Application Developers</b>\n\n\n\n<b>Creative Director/Developer: \nFarjad Abbas</b>\n\nComputer Sciene, University of Toronto, Canada\n\n<i>"“Enhancing this organization through this application will not just support them technologically but encourage other people to join this organization and help them for a greater good.”"</i>\n\n<b>Senior Developer: \nIbrahim Khalil</b>\nSoftware Engineer,Centennial College. Toronto, Canada\n<i>"To please Allah, they are helping other humans and that is what Allah mentioned that us Muslim brothers and sisters should help each other."</i></string>
    <string name="title_activity_volunteer_register">Volunteer Register</string>
    <string name="btn_goback_VR">Go Back</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us_infor"><b>House of JDC</b>\n\n<b>Address:</b> B-24 Block 20 F.B.Area Karachi, Pakistan-75950\n\n<b>Tel:</b> 021-36341059, 021-32033345\n\n<b>Email:</b> info@jdcwelfare.org\n\n<b><i>For Further Details: </i></b>\n\n<b>Name:</b> Syed Zafar Abbas Jafri\n\n<b>Designation:</b> General Secretary\n\n<b>Cell Phone:</b> 0334-3443313\n\n<b>Tel:</b> 021-36341059, 021-32033345\n\n<b>Email:</b> zafar@jdcwelfare.org\n\n<b>Name:</b> Ali Raza\n\n<b>Designation:</b> Media Coordinator\n\n<b>Cell Phone:</b> 0345-2079026\n\n<b>Tel:</b> 021-36341059, 021-32033345\n\n<b>Email:</b> aliraza@jdcwelfare.org\n\n</string>
    <string name="donateus"><b>For Direct Deposit</b>\n\n<b>Bank Name:</b> Bank Al-Habib\n<b>Account Title:</b> Jafaria Disaster Cell Welfare Organization\n<b>Account No:</b>1031-0081-011633-01-2\n<b>Branch Name:</b> Gulberg Sub Branch\n<b>Swift Code:</b> Bahl Pkka</string>
    <string name="disaster">Overcoming poverty in the long-term is made especially difficult when people are hit by emergencies, and poor people are often the most vulnerable. <b>JDC Welfare Organization</b> recognizes that people’s rights are often denied in emergencies. Whenever any emergency happens, JDC Welfare Organization works with the most vulnerable communities to assess their needs and provide immediate assistance. They take a long-term approach to help people recover once the immediate needs of an emergency have been addressed. JDC Welfare Organization also building master plans how to reduce the risk and impact of any future disasters, emergencies and tackles the factors that make certain people more vulnerable to disasters in the first place.\n\n<i><b>The strategic areas of the JDMC directly supported under component includes:</b>\n\n- Risk identification and assessment\n- Strengthening and enhancing emergency vigilance\n- Institutional capacity building related disaster management\n- Government intervention and support both generally at the regional and national level</i></string>
    <string name="healthinfo"><b>24 Hours Ambulance Service</b>\n\nJDC Welfare Organization established their first 24 Hours Ambulance Services to the people of Pakistan. We want to provide emergency support and highest quality care to the local community. Initially we will be operating our ambulance services in Karachi and will increase gradually throughout Pakistan.\n\nThe subject disaster management is the quintessence of development program of the society, initiated for the community welfare, with focus on strengthening the disaster response coping mechanisms. To meet the challenge posed by the changed security environment in Pakistan the JDC welfare organization has decided to adopt a more proactive approach to combat these hazards. Therefore we initially introduced JDC 24 Hours Ambulance service to execute minimum human suffering from any disaster.\n\n<b>Organization of the Ambulances</b>\n\n<b>a </b>This service is being implemented by mobilizing the indigenous resources available with our different branches of JDC in region. Having organized these ambulances into an integrated outfit under a central control, these are deployed in major areas of Karachi city.\n\n<b>b </b>All ambulances have been refurbished, fitted with oxygen cylinders and provided with First Aid boxes. Each ambulance has been facilitated with services of a Para-medical assistant to provide First Aid to the victims of a disaster, terrorist act.\n\n<b>Control Room</b>\n\n Control Room established in the premises of JDC Headquarters is being manned 24 hours and the staff on duty will control the employment of ambulances at the scene of incident and also coordinate with other emergency services, Police and hospitals. The Control Room maintains a computerized record of ambulances and related data. The Control Room is also equipped with city maps and charts with location of hospitals, number of beds earmarked and blood stored for emergencies. Important telephone numbers are mentioned.\n\n<b>Communication Arrangement</b>\n\nThe communication between the Control Room and ambulances will be maintained with mobile phones provided to all ambulance drivers.</string>
    <string name="educationinfo">JDC Welfare Trust is a highly motivated non-profit organization dedicated to provide education, humanitarian support and free basic health care services to the masses with limited or no financial means in Pakistan</string>
	<string name="projectsinfo"><b>Education</b>\n\nJDC Welfare Trust is a highly motivated non-profit organization dedicated to provide education, humanitarian support and free basic health care services to the masses with limited or no financial means in Pakistan.\n\n<b>Ambulance Services: </b>\n\nA fleet of free ambulances are parked at the head office of JDC, Ancholi (Karachi), on the readiness to deal with any emergency cases in surroundings areas of Karachi on a 24 hour basis. JDC also have free ambulances readily available to attend to medical emergencies 24 hours a day. Over 100,000 thousand people have directly benefitted from the free ambulance service in 2011. The daily routine of the ambulance service is to attend to people involved in accidents as well as help those that are poor and vunerable who are unable to travel and therefore transport them from rural areas to the city hospital.\n\n<b>Free Medicines: </b>\n\nToday getting medical treatment become a difficult task in everyone life specially for poor. Private fees are unbelievably high and in Govt hospitals you cannot find medicines and you have to buy medicines on your own, in that case what option left for a poor man? Therefore Ujala welfare Society takes this problem into their account and offer help for medicines to those people who deserve. Every year hundreds of people are getting benefit from this service</string>
	
</resources>
