<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/contact_us"
        android:textColor="#254117"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView 
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">
	    <TextView
	        android:id="@+id/activitycontactus"
	        android:layout_width="match_parent"
	        android:layout_height="425dp"
	        android:layout_marginTop="10dp"
	        android:text="@string/about_us_infor"
	        android:textSize="15sp" 
	        android:textColor="#000000"/>
	</ScrollView>
	
    <Button
        android:id="@+id/btn_goback_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mission_vision_back" />

</LinearLayout>