<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbarStyle="insideInset"
    android:scrollbars="vertical"
    android:background="#ffffff" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/health_title"
        android:textStyle="bold"
        android:textColor="#254117"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/healthactivity"
        android:layout_width="313dp"
        android:layout_height="289dp"
        android:layout_marginTop="20dp"
        android:maxHeight="266dp"
        android:minHeight="266dp"
        android:text="@string/healthinfo"
        android:textColor="#000000"
        android:textSize="15sp" />

	</ScrollView>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/health" />

    <Button
        android:id="@+id/btn_goback_health"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mission_vision_back" />

</LinearLayout>