<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbarStyle="insideInset"
    android:scrollbars="vertical" 
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/disaster_title"
        android:textStyle="bold"
        android:textColor="#254117"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

    	<TextView
    	    android:id="@+id/activitydisaster"
    	    android:layout_width="match_parent"
    	    android:layout_height="335dp"
    	    android:layout_marginTop="20dp"
    	    android:maxHeight="266dp"
    	    android:minHeight="266dp"
    	    android:text="@string/disaster"
    	    android:textColor="#000000"
    	    android:textSize="15sp" />

	</ScrollView>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/disaster" />

    <Button
        android:id="@+id/btn_goback_disaster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mission_vision_back" />

</LinearLayout>