<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#ffffff">
    
	<TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/education_title"
        android:textStyle="bold"
        android:textColor="#254117"
        android:textAppearance="?android:attr/textAppearanceLarge" />

	<ImageView
	    android:id="@+id/imageView1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:src="@drawable/education" />

	<ScrollView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" >

	    <TextView
	        android:id="@+id/educationactivity"
	        android:layout_width="match_parent"
	        android:layout_height="162dp"
	        android:layout_marginTop="20dp"
	        android:text="@string/educationinfo"
	        android:textColor="#000000"
	        android:textSize="15sp" />
	</ScrollView>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="196dp"
        android:src="@drawable/education2" />

    <Button
        android:id="@+id/btn_goback_education"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mission_vision_back" />

</LinearLayout>
