<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:text="@string/mission_vision_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#254117"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="308dp"
        android:layout_height="165dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_weight="0.42"
        android:maxHeight="266dp"
        android:minHeight="266dp"
        android:text="@string/mission_vision"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="italic" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:src="@drawable/mission" />

    <Button
        android:id="@+id/btn_goback_mission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/mission_vision_back" />

</LinearLayout>